manifests-failed/openldap-1.0.8.tgz-manifest.yaml
---
# Source: openldap/charts/ltb-passwd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-ltb-passwd
  labels:
    app.kubernetes.io/name: my-release-ltb
    helm.sh/chart: ltb-passwd-0.1.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: my-release-ltb
    app.kubernetes.io/instance: my-release
---
# Source: openldap/charts/phpldapadmin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: my-release
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: phpldapadmin
    release: my-release
---
# Source: openldap/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release
  namespace: openldap-1.0.8.tgz
  labels:
    app.kubernetes.io/component: my-release
    chart: my-release-1.0.8
    release: my-release
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: ldap-port
      protocol: TCP
      port: 1389
      targetPort: ldap-port
      nodePort: null
    - name: ssl-ldap-port
      protocol: TCP
      port: 1636
      targetPort: ssl-ldap-port
      nodePort: null
  sessionAffinity: None
  selector:
    app.kubernetes.io/component: my-release
    release: my-release
---
# Source: openldap/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-headless
  labels:
    app.kubernetes.io/component: my-release
    chart: my-release-1.0.8
    release: my-release
    heritage: Helm
spec:
  ports:
  - port: 1389
    name: ldap-port
    targetPort: ldap-port
  clusterIP: None
  selector:
    app.kubernetes.io/component: my-release
    release: my-release
  type: ClusterIP
  sessionAffinity: None
---
# Source: openldap/charts/ltb-passwd/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-ltb-passwd
  labels:
    app.kubernetes.io/name: my-release-ltb
    helm.sh/chart: ltb-passwd-0.1.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: my-release-ltb
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-release-ltb
        app.kubernetes.io/instance: my-release
    spec:
      
      containers:
        - name: ltb-passwd
          image: tiredofit/self-service-password:5.2.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
          volumeMounts:
            - mountPath: /etc/openldap
              name: ldap-conf
      volumes:
      - name: ldap-conf
        configMap:
          name: my-release-ltb-passwd-ldap-cm
---
# Source: openldap/charts/phpldapadmin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-release-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: my-release
    heritage: Helm

spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
      release: my-release
  template:
    metadata:
      labels:
        app: phpldapadmin
        release: my-release
    spec:
      
      containers:
      - name: phpldapadmin
        image: osixia/phpldapadmin:0.9.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
            httpGet:
              path: /
              port: http
        readinessProbe:
            httpGet:
              path: /
              port: http
        resources:
            {}
---
# Source: openldap/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  my-release
  labels:
    app.kubernetes.io/name: openldap
    helm.sh/chart: openldap-1.0.8
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: my-release
    chart: my-release-1.0.8
    release: my-release
    heritage: Helm
spec:
  replicas: 3
  selector:
    matchLabels: 
      app.kubernetes.io/name: openldap
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: my-release
  serviceName: my-release-headless
  updateStrategy:

    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap-env: bf529b92733a8b631219c431f745ffb57d55a38ab094d922f13c8feeae46fa7d
      labels:
        app.kubernetes.io/name: openldap
        helm.sh/chart: openldap-1.0.8
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: my-release
        release: my-release
    spec:
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: openldap
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: openldap
                namespaces:
                  - "openldap-1.0.8.tgz"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: openldap
          image: symas/openldap:2.6.6
          imagePullPolicy: Always
          resources:
            limits: {}
            requests: {}
          ports:
            - name: ldap-port
              containerPort: 1389
            - name: ssl-ldap-port
              containerPort:  1636
          livenessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          startupProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: data
              mountPath: /openldap
            - name: certs
              mountPath: /opt/bitnami/openldap/certs
              readOnly: true
            - name: replication-config
              mountPath: /docker-entrypoint-initdb.d/01_serverid-modify.ldif
              subPath: 01_serverid-modify.ldif
            - name: replication-config
              mountPath: /docker-entrypoint-initdb.d/02_rep-modify.ldif
              subPath: 02_rep-modify.ldif
            - name: replication-config
              mountPath: /docker-entrypoint-initdb.d/03_brep-modify.ldif
              subPath: 03_brep-modify.ldif
            - name: replication-config
              mountPath: /docker-entrypoint-initdb.d/04_acls-modify.ldif
              subPath: 04_acls-modify.ldif
      volumes:
        - name: replication-config
          configMap:
            name: my-release-replication-config
        - name: certs
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
        annotations:
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: openldap/charts/ltb-passwd/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-ltb-passwd
  labels:
    app: my-release-ltb
    chart: ltb-passwd-0.1.0
    release: my-release
    heritage: Helm
spec:
  rules:
    - host: ssl-ldap2.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-ltb-passwd
                port:
                  name: http
---
# Source: openldap/charts/phpldapadmin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: my-release
    heritage: Helm
spec:
  rules:
    - host: phpldapadmin.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-phpldapadmin
                port:
                  name: http
---
# Source: openldap/templates/configmap-customldif.yaml
#
# A ConfigMap spec for openldap slapd that map directly to files under
# /container/service/slapd/assets/config/bootstrap/ldif/custom
#
---
# Source: openldap/templates/configmap-customschema.yaml
#
# A ConfigMap spec for openldap slapd that map directly to files under
# /opt/bitnami/openldap/etc/schema/custom
#
